crates/vize_patina/src/linter/snapshots/vize_patina__linter__tests__jsx_markup_ir_diagnostics.snap
---
source: crates/vize_patina/src/linter/mod.rs
expression: "serde_json::to_string_pretty(&lint_result_snapshot(&result)).unwrap()"
---
{
  "diagnostics": [
    {
      "end": 94,
      "fix": null,
      "help": "This element is obsolete per the HTML Living Standard. Use modern HTML elements with CSS for styling instead.",
      "labels": [],
      "message": "<center> is a deprecated HTML element",
      "rule": "html/deprecated-element",
      "severity": "warning",
      "start": 50
    },
    {
      "end": 85,
      "fix": null,
      "help": "Use <p> elements or CSS margin/padding for spacing instead of multiple <br> tags.",
      "labels": [],
      "message": "Consecutive <br> elements detected",
      "rule": "html/no-consecutive-br",
      "severity": "warning",
      "start": 79
    },
    {
      "end": 132,
      "fix": null,
      "help": "Add a datetime attribute with a machine-readable date/time value, e.g. <time datetime=\"2024-12-25\">Christmas</time>",
      "labels": [],
      "message": "<time> element needs a datetime attribute when content is not a valid datetime string",
      "rule": "html/require-datetime",
      "severity": "warning",
      "start": 101
    },
    {
      "end": 115,
      "fix": null,
      "help": "Element IDs must be unique within a document. Duplicate IDs break label associations, ARIA references, and getElementById().",
      "labels": [
        {
          "end": 66,
          "message": "first defined here",
          "start": 58
        }
      ],
      "message": "Duplicate id=\"dup\" found in template",
      "rule": "html/id-duplication",
      "severity": "error",
      "start": 107
    },
    {
      "end": 161,
      "fix": null,
      "help": "Use CSS `padding` on cells instead.",
      "labels": [],
      "message": "The \"cellPadding\" attribute on <table> is deprecated",
      "rule": "html/deprecated-attr",
      "severity": "warning",
      "start": 146
    }
  ],
  "error_count": 1,
  "file": "Demo.jsx",
  "warning_count": 4
}
